# EfficientViT-SAM-finetune

./: .gitignore  README.md  demo_app.py  effvitsam_eval.py  effvitsam_finetune.py  effvitsam_test.py  pyproject.toml  requirements.txt  ruff.toml
efficientvit/clscore/trainer/: cls_trainer.py
efficientvit/models/efficientvit/: backbone.py
efficientvit/samcore/trainer/: sam_trainer.py
learn/: effvitsam_finetune.py  effvitsam_finetune_learn.py
prepare_datasets_sobav2/: .gitignore  README.md  batch_process_images.py  batch_process_images_white_del.py  bathch_process_names.py  count_image_names.py
