[project]
dependencies = [
  "gradio>=5.12.0",
  "onnx>=1.17.0",
  "onnxruntime-gpu>=1.20.1",
  "onnxsim>=0.4.36",
  "opencv-python>=4.11.0.86",
  "pycocotools>=2.0.8",
  "ruff>=0.9.2",
  "scikit-image>=0.25.0",
  "scikit-learn>=1.6.1",
  "segment-anything>=1.0",
  "tensorboard>=2.18.0",
  "timm>=1.0.13",
  "tqdm>=4.67.1",
]
description = "Add your description here"
name = "efficientvit-sam-finetune"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"
